chore: clean up code